--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=digiHello
 
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/recensement
+spring.datasource.username=user
+spring.datasource.password=user
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 server.port=8082
