--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
+# ===============================
+# APPLICATION
+# ===============================
 spring.application.name=digiHello
-
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/recensement
-spring.datasource.username=user
-spring.datasource.password=user
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 server.port=8082
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+# ===============================
+# DATABSE
+# ===============================
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3307/recensement
+spring.datasource.username=root
+spring.datasource.password=
+# ===============================
+# SQL LOADING
+# ===============================
+spring.sql.init.mode=always
+spring.sql.init.continue-on-error=true
