--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.datasource.password=
 # ===============================
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
+# ===============================
+# CONFIG
+# ===============================
