--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3307/recensement
 spring.datasource.username=root
 spring.datasource.password=
+spring.jpa.defer-datasource-initialization=true
 # ===============================
 # SQL LOADING
 # ===============================
