--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.jpa.defer-datasource-initialization=true
 # ===============================
 # SQL LOADING
 # ===============================
-spring.sql.init.mode=always
-spring.sql.init.continue-on-error=true
+#spring.sql.init.mode=always
+#spring.sql.init.continue-on-error=true
 # ===============================
 # CONFIG
 # ===============================
