--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,7 @@ spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
 #spring.sql.init.continue-on-error=true
 # ===============================
-# CONFIG
+# SECURITY
 # ===============================
+spring.security.user.name=admin
+spring.security.user.password=admin
