TP OAuth2 GOOGLE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ spring.jpa.defer-datasource-initialization=true
 # ===============================
 spring.security.user.name=admin
 spring.security.user.password=admin
+# ===============================
+# TEMPLATING
+# ===============================
+spring.thymeleaf.cache = false
+# ===============================
+# GOOGLE OAuth2
+# ===============================
