TP OAuth2 GOOGLE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ spring.thymeleaf.cache = false
 # ===============================
 # GOOGLE OAuth2
 # ===============================
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
